--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,38 +16,38 @@ find_package(Qt5Widgets CONFIG REQUIRED)
 add_subdirectory(igraph)
 # Populate CMake variables with the sources
 
-set (File_main_cpp ${PROJECT_SOURCE_DIR}/main.cpp)
-set (File_mainwindow_cpp ${PROJECT_SOURCE_DIR}/mainwindow.cpp)
-set (File_mainwindow_h ${PROJECT_SOURCE_DIR}/mainwindow.h)
-set (File_mainwindow_ui  ${PROJECT_SOURCE_DIR}/mainwindow.ui)
-set (File_graph_cpp ${PROJECT_SOURCE_DIR}/graph.cpp)
-set (File_tree_cpp ${PROJECT_SOURCE_DIR}/tree.cpp)
-set (File_subtreeReloc_cpp ${PROJECT_SOURCE_DIR}/subtreeReloc.cpp)
-set (File_subtreeswap_cpp ${PROJECT_SOURCE_DIR}/subtreeswap.cpp)
-set (File_nodeswap_cpp ${PROJECT_SOURCE_DIR}/nodeswap.cpp)
-set (File_multirelocate_cpp ${PROJECT_SOURCE_DIR}/multirelocate.cpp)
-set (File_crossover_cpp ${PROJECT_SOURCE_DIR}/crossover.cpp)
-set (File_perturbation_cpp ${PROJECT_SOURCE_DIR}/perturbation.cpp)
-set (File_atsp_cpp ${PROJECT_SOURCE_DIR}/atsp.cpp)
-set (File_graphvizdotgenerator_cpp ${PROJECT_SOURCE_DIR}/graphvizdotgenerator.cpp)
-set (File_vns_cpp ${PROJECT_SOURCE_DIR}/vns.cpp)
-set (File_localsearch_cpp ${PROJECT_SOURCE_DIR}/localsearch.cpp)
-set (File_heuristicgenerator_cpp ${PROJECT_SOURCE_DIR}/heuristicgenerator.cpp)
-set (File_runner_cpp ${PROJECT_SOURCE_DIR}/runner.cpp)
-set (File_tsplib_cpp ${PROJECT_SOURCE_DIR}/tsplib.cpp)
+set (File_main_cpp ${PROJECT_SOURCE_DIR}/src/main.cpp)
+set (File_mainwindow_cpp ${PROJECT_SOURCE_DIR}/src/mainwindow.cpp)
+set (File_mainwindow_h ${PROJECT_SOURCE_DIR}/src/mainwindow.h)
+set (File_mainwindow_ui  ${PROJECT_SOURCE_DIR}/src/mainwindow.ui)
+set (File_graph_cpp ${PROJECT_SOURCE_DIR}/src/graph.cpp)
+set (File_tree_cpp ${PROJECT_SOURCE_DIR}/src/tree.cpp)
+set (File_subtreeReloc_cpp ${PROJECT_SOURCE_DIR}/src/subtreeReloc.cpp)
+set (File_subtreeswap_cpp ${PROJECT_SOURCE_DIR}/src/subtreeswap.cpp)
+set (File_nodeswap_cpp ${PROJECT_SOURCE_DIR}/src/nodeswap.cpp)
+set (File_multirelocate_cpp ${PROJECT_SOURCE_DIR}/src/multirelocate.cpp)
+set (File_crossover_cpp ${PROJECT_SOURCE_DIR}/src/crossover.cpp)
+set (File_perturbation_cpp ${PROJECT_SOURCE_DIR}/src/perturbation.cpp)
+set (File_atsp_cpp ${PROJECT_SOURCE_DIR}/src/atsp.cpp)
+set (File_graphvizdotgenerator_cpp ${PROJECT_SOURCE_DIR}/src/graphvizdotgenerator.cpp)
+set (File_vns_cpp ${PROJECT_SOURCE_DIR}/src/vns.cpp)
+set (File_localsearch_cpp ${PROJECT_SOURCE_DIR}/src/localsearch.cpp)
+set (File_heuristicgenerator_cpp ${PROJECT_SOURCE_DIR}/src/heuristicgenerator.cpp)
+set (File_runner_cpp ${PROJECT_SOURCE_DIR}/src/runner.cpp)
+set (File_tsplib_cpp ${PROJECT_SOURCE_DIR}/src/tsplib.cpp)
 
-set (File_graph_h ${PROJECT_SOURCE_DIR}/graph.h)
-set (File_tsplib_h ${PROJECT_SOURCE_DIR}/tsplib.h)
-set (File_heuristics_h ${PROJECT_SOURCE_DIR}/heuristics.h)
-set (File_multioperator_h ${PROJECT_SOURCE_DIR}/multioperation.h)
-set (File_graphvizdotgenerator_h ${PROJECT_SOURCE_DIR}/graphvizdotgenerator.h)
-set (File_heuristicgenerator_h ${PROJECT_SOURCE_DIR}/heuristicgenerator.h)
+set (File_graph_h ${PROJECT_SOURCE_DIR}/src/graph.h)
+set (File_tsplib_h ${PROJECT_SOURCE_DIR}/src/tsplib.h)
+set (File_heuristics_h ${PROJECT_SOURCE_DIR}/src/heuristics.h)
+set (File_multioperator_h ${PROJECT_SOURCE_DIR}/src/multioperation.h)
+set (File_graphvizdotgenerator_h ${PROJECT_SOURCE_DIR}/src/graphvizdotgenerator.h)
+set (File_heuristicgenerator_h ${PROJECT_SOURCE_DIR}/src/heuristicgenerator.h)
 
 qt5_wrap_cpp(File_mainwindow_hdr_moc ${File_mainwindow_h})
 qt5_wrap_ui (File_mainwindow_ui_moc  ${File_mainwindow_ui})
 
 
-include_directories (${PROJECT_SOURCE_DIR})
+include_directories (${PROJECT_SOURCE_DIR}/src)
 
 add_library (MyProjectLib 
 	${File_mainwindow_cpp}
